# HaskellChess

./: chess.cabal
src/: Ai.hs  AltParser.hs  Chess.hs  Debute.hs  Evaluators.hs  FEN.hs  IterDeep.hs  Main.hs  UCI.hs  Uci2Chess.hs  Utils.hs  common.h
